--- a/htmls/profile/profile.html
+++ b/htmls/profile/profile.html
@@ -1,4 +1,4 @@
-{% extends google.html %}
+{% extends ../google.html %}
 
 {% block static %}
 	<link rel="stylesheet" href="{{ static_url('css/profile.css') }}">
