--- a/htmls/weibo/message.html
+++ b/htmls/weibo/message.html
@@ -1,6 +1,6 @@
 <dl class="feed_list W_linecolor message" id="m-{{ message['id'] }}">
 	<dt class="face">
-		<a href="" title="一米七三2010"><img usercard="id={{ message['owner'] }}" title="{{ message['nick'] }}" alt="" width="50" height="50" src=""></a>
+		<a href="" title="一米七三2010"><img usercard="id={{ message['owner'] }}" title="{{ message['nick'] }}" alt="" width="50" height="50" src="/image/avatar/{{ message['owner'] }}_50"></a>
 	</dt>
 	<dd class="content">
 		<p class="feed_list_content">
