--- a/htmls/weibo/reply.html
+++ b/htmls/weibo/reply.html
@@ -1,5 +1,5 @@
 <dl id="m-{{ reply['id'] }}" class="comment_list W_linecolor">
-	<dt><a href=""><img width="30" height="30" alt="一米七三2010" src=""></a></dt>
+	<dt><a href=""><img width="30" height="30" alt="一米七三2010" src="/image/avatar/{{ reply['owner'] }}_30"></a></dt>
 	<dd>
 		<a href="">{{ reply['nick'] }}</a>：{{ reply['content'] }} ({{ reply['created'] }})
 		<p class="info W_textb">
