--- a/htmls/event/event_show.html
+++ b/htmls/event/event_show.html
@@ -1,9 +1,69 @@
-{% extends google.html %}
+{% extends ../google.html %}
 
 {% block static %}
-	<link rel="stylesheet" type="text/css" href="{{ static_url('css/layout.css') }}"/>
+	<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
+	<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
+	
+	<link rel="stylesheet" type="text/css" href="{{ static_url('css/event.css') }}"/>
+	<link rel="stylesheet" href="{{ static_url('css/weibo.css') }}">
 {% end %}
-{% block leftnav %}{% end %}
+{% block leftnav %}
+<div>
+	<a href="/event/list/">回到活动列表</a>
+</div>
+{% end %}
 {% block center_col %}
-show
+	<div id="event_show">
+		<div class="left">
+			<div class="poster">
+				<a href="#"><img src="/image/avatar/{{ logo }}_300" width=300 height=300 /></a>
+			</div>
+			<div class="operate">
+				{% if is_join %}
+					{% module Template("util/state_toggle.html", id=id, kind='join', switch='报名参加', value='退出活动') %}
+				{% else %}
+					{% module Template("util/state_toggle.html", id=id, kind='join', switch='退出活动', value='报名参加') %}
+				{% end %}
+				<a style="display:none">神支</a>
+				<a style="display:none">分享</a>
+			</div>
+			<div id="event_weibo">
+				<div class="num" node-type="num" style="display: block;font-size:16px;">还可以输入
+					<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
+				</div>
+				<form action="/weibo" method="post" id="weiboform">
+					<textarea rows="5" cols="60" name="content" id="weibo-content">#{{ title }}#</textarea>
+					<input type="submit" value="回复" style="height:20px;"/>
+					<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a"/>
+				</form><br><hr>
+				<div class="feed_lists" id="weibo" maintype="{{ tid }}" subtype="" title="#{{ title }}#">
+					<div class="bottom feed_list"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;"></a><input type="hidden" value="0"/></div>
+				</div>
+			</div>
+		</div>
+		<div class="right">
+			<div class="info">
+				<h1>{{ title }}</h1>
+				<table>
+					<tr><td>发起人</td><td><em>{{ nick }}</em></td></tr>
+					<tr><td>联系方式</td><td>
+						{% for k in members %}
+							<em>{{members[k]}}</em><br/>
+						{% end %}
+					</td></tr>
+					<tr><td>性质</td><td><em>{{is_merc}}，难度{{level}}</em></td></tr>
+					<tr><td>起止时间</td><td><em>{{date}} 至 12月31日</em></td></tr>
+					<tr style="display:none;"><td>活动地点</td><td><em>{{ place }}</em></td></tr>
+					<tr><td>费用估计</td><td><em>50/人</em></td></tr>
+				</table>
+			</div>
+			<ul class="user_list">
+				{% for i in user_list %}
+					<li><img src="/image/avatar/{{i['owner']}}_50" width=50 height=50 /></li>
+				{% end %}
+			</div>
+		</div>
+	</div>
 {% end %}
