--- a/htmls/event/event_puba.html
+++ b/htmls/event/event_puba.html
@@ -57,7 +57,7 @@
 			<div class="event_li"><label class="eleft">装备要求<em class="needed"></em></label><div class="eright"><textarea name="equip" rows="3" cols="60"></textarea></div></div>
 			<div class="event_li"><label class="eleft">注意事项<em class="needed"></em></label><div class="eright"><textarea name="declare_tl" rows="3" cols="60"></textarea></div></div>
 			<div class="event_li"><label class="eleft">免责声明<em class="needed"></em></label><div class="eright"><textarea name="attention_tl" rows="3" cols="60"></textarea></div></div>
-			<div class="event_li"><label class="eleft"><em class="needed"></em></label><div class="eright"><input type="submit"></div></div>
+			<div class="event_li"><label class="eleft"><em class="needed"></em></label><div class="eright"><input type="submit" value="提交"></div></div>
 		</form>
 	</div>
 {% end %}
