--- a/htmls/event/event_pubb.html
+++ b/htmls/event/event_pubb.html
@@ -22,7 +22,7 @@
 			</div>
 			<div class="event_li"><label class="eleft">集合时间<em class="needed">*</em></label><div class="eright"><script>toggleDate("collect_time", 0,0,0)</script></div></div>
 			<div class="event_li" style="display:none;"><label class="eleft">集合地点<em class="needed">*</em></label><div class="eright"></div></div>
-			<div class="event_li"><label class="eleft"><input type="hidden" name="eid" value="{{eid}}"><em class="needed"></em></label><div class="eright"><input type="submit"></div></div>
+			<div class="event_li"><label class="eleft"><input type="hidden" name="eid" value="{{eid}}"><em class="needed"></em></label><div class="eright"><input type="submit" value="提交"></div></div>
 		</form>
 	</div>
 	
