--- a/htmls/util/popup_toggle.html
+++ b/htmls/util/popup_toggle.html
@@ -1,4 +1,4 @@
 <div><a href="#" url="/a/toggle/popup" onclick="togglePopup(this);return false;">弹出</a></div>
-<div><a class="fancybox" href="" title="Inline">Inline</a></div>
-<div><a class="fancybox fancybox.ajax" href="/account/login">Ajax</a></div>
-<div><a class="fancybox fancybox.iframe" href="/account/login">Iframe</a></div>
+<div><a class="fancybox" href="/" title="Inline">Inline</a></div>
+<div><a class="fancybox fancybox.ajax" href="/account/login/">Ajax</a></div>
+<div><a class="fancybox fancybox.iframe" href="/">Iframe</a></div>
