--- a/htmls/event/event_pubb.html
+++ b/htmls/event/event_pubb.html
@@ -1,20 +1,12 @@
-{% extends ../google.html %}
+{% extends ../frame.html %}
 
 {% block static %}
-	<script language="javascript" src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
-	<script language="javascript" src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
-	<script language="javascript" src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
-
 	<link rel="stylesheet" type="text/css" href="{{ static_url('css/event.css') }}"/>
+	{% block static-added %}{% end %}
 {% end %}
-{% block leftnav %}
-	<div>
-		<a href="/event/puba">返回第一步</a>
-	</div>
-{% end %}
-{% block center_col %}
+{% block bodyleft %}
+	<div id="subnavi" class="gybox"><a style="float:left;display:block;">活动信息</a><span style="float:left;display:block;margin:auto 250px;background:#F5F5F5;">报名信息</span><a style="float:left;display:block;">等待审核</a></div>
 	<div id="event">
-		<h1>活动发布</h1>
 		<form method="POST" action="/event/pubb/">
 			<div class="event_li"><label class="eleft">截止时间<em class="needed">*</em></label><div class="eright"><script>toggleDate("close_time", 0,0,0)</script></div></div>
 			<div class="event_li"><label class="eleft">人数范围<em class="needed">*</em></label>
@@ -25,5 +17,12 @@
 			<div class="event_li"><label class="eleft"><input type="hidden" name="eid" value="{{eid}}"><em class="needed"></em></label><div class="eright"><input type="submit" value="提交"></div></div>
 		</form>
 	</div>
-	
+{% end %}
+{% block bodyright %}
+	<div class="apkbox boxmg" style="width:200px;"><p><a>粉色</a></p></div>
+	<div class="ardbox boxmg" style="width:200px;"><p><a>紫色</a></p></div>
+	<div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
+	<div class="agrbox boxmg" style="width:200px;"><p><a>绿色</a></p></div>
+	<div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
+	<div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
 {% end %}
