--- a/htmls/event/event_show.html
+++ b/htmls/event/event_show.html
@@ -1,69 +1,58 @@
-{% extends ../google.html %}
+{% extends ../frame.html %}
 
 {% block static %}
-	<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
-	
-	<link rel="stylesheet" type="text/css" href="{{ static_url('css/event.css') }}"/>
-	<link rel="stylesheet" href="{{ static_url('css/weibo.css') }}">
+	{% block static-added %}{% end %}
 {% end %}
-{% block leftnav %}
-<div>
-	<a href="/event/list/">回到活动列表</a>
-</div>
-{% end %}
-{% block center_col %}
-	<div id="event_show">
-		<div class="left">
-			<div class="poster">
-				<a href="#"><img src="/image/avatar/{{ logo }}_300" width=300 height=300 /></a>
-			</div>
-			<div class="operate">
-				{% if is_join %}
-					{% module Template("util/state_toggle.html", id=id, kind='join', switch='报名参加', value='退出活动') %}
-				{% else %}
-					{% module Template("util/state_toggle.html", id=id, kind='join', switch='退出活动', value='报名参加') %}
-				{% end %}
-				<a style="display:none">神支</a>
-				<a style="display:none">分享</a>
-			</div>
-			<div id="event_weibo">
-				<div class="num" node-type="num" style="display: block;font-size:16px;">还可以输入
-					<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
-				</div>
-				<form action="/weibo" method="post" id="weiboform">
-					<textarea rows="5" cols="60" name="content" id="weibo-content">#{{ title }}#</textarea>
-					<input type="submit" value="回复" style="height:20px;"/>
-					<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a"/>
-				</form><br><hr>
-				<div class="feed_lists" id="weibo" maintype="{{ tid }}" subtype="" title="#{{ title }}#">
-					<div class="bottom feed_list"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;"></a><input type="hidden" value="0"/></div>
-				</div>
-			</div>
+{% block bodyleft %}
+	<div id="showdetail">
+		<img width=300 height=300 src="/image/avatar/{{logo}}_300"/>
+		<p>发起人：{{ nick }}</p>
+		<p>发布日期：{{ created }}</p>
+		<p>户外标签：{{ tags }}</p>
+		<p>性质：{{ is_merc }}、{{ club }}、{{ level }}</p>
+		<p>路线：{{ route }}</p>
+		<p>活动地点：{{ place }}</p>
+		<p>活动开始时间：{{ date }}</p>
+		<hr/>
+		<p>报名截止时间：{{ deadline }}</p>
+		<p>报名人数：{{ fr }} 到 {{ to }}</p>
+		<p>集合时间：{{ when }}</p>
+		<p>集合地点：{{ where }}</p>
+		<br><br>
+		<p>计划安排：{{ schedule_tl }}</p>
+		<p>花费统计：{{ spend_tl }}</p>
+		<p style="display:none;">装备要求：{{ equip }}</p>
+		<p>免责声明：{{ declare_tl }}</p>
+		<p>注意事项：{{ attention_tl }}</p>
+		<p style="display:none;">人员配置：{{ members }}</p>
+	</div>
+	<div style="clear:both;"></div>
+	<div id="weibo" name="weibo">
+		<div class="num" style="display:block;font-size:16px;">还可以输入
+			<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
 		</div>
-		<div class="right">
-			<div class="info">
-				<h1>{{ title }}</h1>
-				<table>
-					<tr><td>发起人</td><td><em>{{ nick }}</em></td></tr>
-					<tr><td>联系方式</td><td>
-						{% for k in members %}
-							<em>{{members[k]}}</em><br/>
-						{% end %}
-					</td></tr>
-					<tr><td>性质</td><td><em>{{is_merc}}，难度{{level}}</em></td></tr>
-					<tr><td>起止时间</td><td><em>{{date}} 至 12月31日</em></td></tr>
-					<tr style="display:none;"><td>活动地点</td><td><em>{{ place }}</em></td></tr>
-					<tr><td>费用估计</td><td><em>50/人</em></td></tr>
-				</table>
-			</div>
-			<ul class="user_list">
-				{% for i in user_list %}
-					<li><img src="/image/avatar/{{i['owner']}}_50" width=50 height=50 /></li>
-				{% end %}
-			</div>
+		<form action="/weibo" method="post" id="weiboform">
+			<textarea rows="5" cols="60" name="content" id="weibo-content">#{{ title }}#</textarea>
+			<input type="submit" value="回复" style="height:20px;">
+			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
+		</form><br/><hr/>
+		<div class="wb_items" maintype="{{ tid }}" subtype="" title="#{{ title }}#">
+			<div class="bottom wb_item"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;">没有更多的了</a><input type="hidden" value="0"></div>
 		</div>
 	</div>
+{% end %}
+{% block bodyright %}
+	<div class="apkbox boxmg" style="width:200px;"><p><a>红色</a></p></div>
+	<div class="ardbox boxmg" style="width:200px;"><p><a>紫色</a></p></div>
+	<div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
+	<div class="agrbox boxmg" style="width:200px;"><p>
+		{% if is_join %}
+			{% module Template("util/state_toggle.html", id=id, kind='join', switch='报名参加', value='退出活动') %}
+		{% else %}
+			{% module Template("util/state_toggle.html", id=id, kind='join', switch='退出活动', value='报名参加') %}
+		{% end %}
+	</p></div>
+	<div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
+	<div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
 {% end %}
