--- a/htmls/profile/profile.html
+++ b/htmls/profile/profile.html
@@ -1,13 +1,15 @@
-{% extends ../google.html %}
+{% extends ../frame.html %}
 
 {% block static %}
-	<link rel="stylesheet" href="{{ static_url('css/profile.css') }}">
+	{% block static-added %}{% end %}
 {% end %}
-{% block leftnav %}
-	<div>
-		<a href="/">回首页</a>
-	</div>
+{% block bodyleft %}
 {% end %}
-{% block center_col %}
-	<h1>profile</h1>
+{% block bodyright %}
+   <div class="apkbox boxmg" style="width:200px;"><p><a>粉色</a></p></div>
+   <div class="ardbox boxmg" style="width:200px;"><p><a>紫色</a></p></div>
+   <div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
+   <div class="agrbox boxmg" style="width:200px;"><p><a>绿色</a></p></div>
+   <div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
+   <div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
 {% end %}
