--- a/htmls/weibo/weibo.html
+++ b/htmls/weibo/weibo.html
@@ -1,24 +1,33 @@
-{% extends ../google.html %}
+{% extends ../frame.html %}
 
 {% block static %}
-	<link rel="stylesheet" href="{{ static_url('css/weibo.css') }}">
-	<script src="{{ static_url('js/jquery.min.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/jquery.own.js') }}" type="text/javascript"></script>
 	<script src="{{ static_url('js/weibo.js') }}" type="text/javascript"></script>
-	<script src="{{ static_url('js/utility.js') }}" type="text/javascript"></script>
 	{% block static-added %}{% end %}
 {% end %}
-{% block leftnav %}{% end %}
-{% block center_col %}
-	<div class="num" node-type="num" style="display: block;font-size:16px;">还可以输入
-		<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
+{% block bodyleft %}
+	<div id="subnavi" class="gybox"style="display:block"><a>123</a><a style="float:right;font-size:14px;">地图>></a></div>
+	<div id="weibo">
+		<div class="num" style="display:block;font-size:16px;">还可以输入
+			<span style="font-size:24px;color:#ff9933;" id="num">140</span> 字
+		</div>
+		<form action="/weibo" method="post" id="weiboform">
+			<textarea rows="5" cols="60" name="content" id="weibo-content"></textarea>
+			<input type="submit" value="回复" style="height:20px;">
+			<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a">
+		</form><br/><hr/>
+		<div class="wb_items" maintype="" subtype="">
+			<div class="bottom wb_item">
+				<a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;">没有更多的了</a>
+				<input type="hidden" value="0">
+			</div>
+		</div>
 	</div>
-	<form action="/weibo" method="post" id="weiboform">
-		<textarea rows="5" cols="60" name="content" id="weibo-content"></textarea>
-		<input type="submit" value="回复" style="height:20px;"/>
-		<input type="hidden" name="_xsrf" value="ca61c7cf01cf4097bd14c959c519637a"/>
-	</form><br><hr>
-	<div class="feed_lists" id="weibo" maintype="" subtype="">
-		<div class="bottom feed_list"><a href="#" style="display:block;text-align:center;" onclick="Weibo.extend(this);return false;"></a><input type="hidden" value="0"/></div>
-	</div>
+{% end %}
+{% block bodyright %}
+   <div class="apkbox boxmg" style="width:200px;"><p><a>粉色</a></p></div>
+   <div class="ardbox boxmg" style="width:200px;"><p><a>紫色</a></p></div>
+   <div class="ablbox boxmg" style="width:200px;"><p><a>蓝色</a></p></div>
+   <div class="agrbox boxmg" style="width:200px;"><p><a>绿色</a></p></div>
+   <div class="aylbox boxmg" style="width:200px;"><p><a>黄色</a></p></div>
+   <div class="abrbox boxmg" style="width:200px;"><p><a>棕色</a></p></div>
 {% end %}
