--- a/htmls/frame.html
+++ b/htmls/frame.html
@@ -35,7 +35,7 @@
 					<span><a>邮</a></span>
 					<span><a>私</a></span>
 					<span id="userinfo">
-						<a onclick="showUinfo(this);return false;" href="#">一米七三<img width=30 height=30 src="/image/avatar/{{uid}}_30"/></a>
+						<a onclick="showUinfo(this);return false;" href="#">{{ current_user }}<img width=30 height=30 src="/image/avatar/{{uid}}_30"/></a>
 						<ul>
 							<li><a href="/account/profile/"><img width=30 height=30 src="/image/avatar/{{uid}}_30"/><span>主页</span></a></li>
 							<li><a href="/account/setting/"><img width=30 height=30 src="/image/avatar/{{uid}}_30"/><span>设置</span></a></li>
