--- a/htmls/box.html
+++ b/htmls/box.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta name="description" content="">
+		<meta property="wb:webmaster" content="98499125f4d97e8f" />
 		<meta name="robots" content="noodp"><title>远航户外</title>
 		<link rel="stylesheet" href="{{ static_url('css/frame.css') }}">
 		{% block static %}{% end %}
