--- a/htmls/index.html
+++ b/htmls/index.html
@@ -4,9 +4,9 @@
 {% block box %}
 	<div class="agrbox boxmg lucency" style="width:400px;height:300px;">
 		<div style="margin:10px 0 0 10px;">
-			<from action="" method="POST">
-				<input type=text style="width:300px;height:30px;"/>&nbsp&nbsp<input type=submit  value="获取邀请"/>
-			</from>
+			<form action="/account/invite/" method="POST">
+				<input type="text" name="mail" style="width:300px;height:30px;"/>&nbsp&nbsp<input type="submit" value="获取邀请"/>
+			</form>
 		</div><br/>
 		<div style="margin-left:10px;">
 			<a style="background:#F0FFF0;" href="/account/thirdpart/"><img src="{{static_url('img/sina24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp
