--- a/htmls/profile/register.html
+++ b/htmls/profile/register.html
@@ -7,6 +7,7 @@
 			<form action="/account/register/" method="POST">
 				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
 				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
+				<input name="email" type="hidden" value="{{email}}"/>
 				<input type=submit  value="注册"/>
 			</form>
 		</div><br/>
