--- a/htmls/profile/thirdpart.html
+++ b/htmls/profile/thirdpart.html
@@ -1,29 +1,15 @@
-{% extends ../google.html %}
+{% extends ../box.html %}
 
-{% block static %}
-	<link rel="stylesheet" href="{{ static_url('css/profile.css') }}">
-{% end %}
-{% block leftnav %}
-	<div>
-		<a href="/">回首页</a>
+{% block static %}{% end %}
+{% block box %}
+	<div class="agrbox boxmg lucency" style="width:400px;height:300px;">
+		<div style="margin:10px 0 0 10px;">
+			<form action="/account/thirdpart?atc=reg" method="POST">
+				<span>绰号：</span><input name="nick" type=text value="{{ nick }}" style="width:300px;height:30px;"/><br/><br/>
+				<span>邮箱：</span><input name="email" type=text style="width:300px;height:30px;"/><br/><br/>
+				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
+				<input type=submit  value="完善信息"/>
+			</form>
+		</div><br/>
 	</div>
-{% end %}
-{% block center_col %}
-<div style="float:left; width:300px;">
-	<h3>设置安全邮箱与密码</h3><br/><br/>
-	<form action="/account/thirdpart?atc=reg" method="post">
-		绰号:<input type="text" name="nick" value="{{ nick }}"/><br/><br/>
-		email:<input type="email" name="email"/><br/><br/>
-		密码:<input type="password" name="password"/><br/><br/>
-		<input type="submit" value="注册">
-	</form>
-</div>
-<div style="float:left; width:300px;">
-	<h3>绑定已有账号</h3><br/><br/>
-	<form action="/account/thirdpart?atc=bind" method="post">
-		绰号: <input type="text" name="nick"/><br/><br/>
-		密码:<input type="password" name="password"/><br/><br/>
-		<input type="submit" value="login">
-	</form>
-</div>
 {% end %}
