--- a/htmls/box.html
+++ b/htmls/box.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta name="description" content="">
 		<meta property="wb:webmaster" content="98499125f4d97e8f" />
+		<meta property="qc:admins" content="105143144761516016761667" />
 		<meta name="robots" content="noodp"><title>远航户外</title>
 		<link rel="stylesheet" href="{{ static_url('css/frame.css') }}">
 		{% block static %}{% end %}
