--- a/htmls/index.html
+++ b/htmls/index.html
@@ -9,8 +9,8 @@
 			</form>
 		</div><br/>
 		<div style="margin-left:10px;">
-			<a style="background:#F0FFF0;" href="/thirdpart/sina/"><img src="{{static_url('img/sina24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp
-	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a style="background:#F0FFF0;" href="/thirdpart/qq/"><img src="{{static_url('img/qq24.png')}}"/></a>
+			<a style="background:#F0FFF0;" href="/auth/sina/"><img src="{{static_url('img/sina24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp
+	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a style="background:#F0FFF0;" href="/auth/qq/"><img src="{{static_url('img/qq24.png')}}"/></a>
 		</div></br>
 		<form action="/account/login/" method="POST">
 			<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
