--- a/htmls/profile/thirdpart.html
+++ b/htmls/profile/thirdpart.html
@@ -8,6 +8,7 @@
 				<span>绰号：</span><input name="nick" type=text value="{{ nick }}" style="width:300px;height:30px;"/><br/><br/>
 				<span>邮箱：</span><input name="email" type=text style="width:300px;height:30px;"/><br/><br/>
 				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
+				<input name="photo" type=hidden value="{{ photo }}"/>
 				<input type=submit  value="完善信息"/>
 			</form>
 		</div><br/>
