--- a/htmls/index.html
+++ b/htmls/index.html
@@ -9,10 +9,10 @@
 			</form>
 		</div><br/>
 		<div style="margin-left:10px;">
-			<a style="background:#F0FFF0;" href="/auth/sina/"><img src="{{static_url('img/sina24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp
+			<a style="background:#F0FFF0;display:none;" href="/auth/sina/"><img src="{{static_url('img/sina24.png')}}"/></a>&nbsp&nbsp&nbsp&nbsp
 	<a style="background:#F0FFF0;" href="/auth/qq/"><img src="{{static_url('img/qq24.png')}}"/></a>
-	&nbsp&nbsp<a style="background:#F0FFF0;color:red;" href="/account/login/">登陆</a>
-		</div></br>
+	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a style="background:#F0FFF0;color:red;" href="/account/login/">已注册驴友登陆</a>
+		</div></br><hr/>
 		<form action="/account/register/" method="POST">
 			<span>&nbsp&nbsp&nbsp绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
 			<span>&nbsp&nbsp&nbsp邮箱：</span><input name="email" type=text style="width:300px;height:30px;"/><br/><br/>
