--- a/htmls/profile/register.html
+++ b/htmls/profile/register.html
@@ -6,9 +6,9 @@
 		<div style="margin:10px 0 0 10px;">
 			<form action="/account/register/" method="POST">
 				<span>绰号：</span><input name="nick" type=text style="width:300px;height:30px;"/><br/><br/>
+				<span>邮箱：</span><input name="email" type=password style="width:300px;height:30px;"/><br/><br/>
 				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
-				<input name="email" type="hidden" value="{{email}}"/>
-				<input type=submit  value="注册"/>
+				<div style="padding-left:320px;"><input type=submit value="注册"/></div>
 			</form>
 		</div><br/>
 	</div>
