--- a/htmls/profile/thirdpart.html
+++ b/htmls/profile/thirdpart.html
@@ -9,7 +9,7 @@
 				<span>邮箱：</span><input name="email" type=text style="width:300px;height:30px;"/><br/><br/>
 				<span>密码：</span><input name="password" type=password style="width:300px;height:30px;"/><br/><br/>
 				<input name="extra" type=hidden value="{{ extra_args }}"/>
-				<input type=submit  value="完善信息"/>
+				<div style="padding-left:320px;"><input type=submit value="完善信息"/></div>
 			</form>
 		</div><br/>
 	</div>
